text change as git test.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="35dp"
-        android:text="Food n such!"
+        android:text="Food!"
         android:textColor="@color/primary"
         android:textSize="40sp"
         android:textStyle="bold" />
