add text edit field and log response upon button click,. use intent to transition to FoodActivity.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,4 +34,17 @@
         android:backgroundTint="@color/accent"
         android:text="Find Food"
         android:textColor="#FFFFFF" />
+
+    <EditText
+        android:id="@+id/foodEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="183dp"
+        android:background="#F8F8F8"
+        android:ems="10"
+        android:hint="Enter Noms"
+        android:inputType="textPersonName"
+        android:padding="5dp" />
 </RelativeLayout>
