integrate realm to build and instantiate first realm model for ingredients. adjust instantiation configuration for proper building

--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Food suggestions for "
+        android:text="@string/food_suggestions_for"
         tools:layout_editor_absoluteX="125dp"
         tools:layout_editor_absoluteY="1dp" />
 
