--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,9 +30,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="126dp"
+        android:layout_marginBottom="106dp"
         android:backgroundTint="@color/accent"
-        android:text="Find Food"
+        android:text="@string/find_food_btn"
         android:textColor="#FFFFFF" />
 
     <EditText
@@ -54,5 +54,6 @@
         android:layout_height="120dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="390dp"
-        android:background="#F8F8F8">"One"</ListView>
+        android:background="#F8F8F8">"One"
+    </ListView>
 </RelativeLayout>
