clean up errors preventing a build

--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".FoodActivity">
 
-    <!--<TextView-->
-        <!--android:id="@+id/foodTextView"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:text="@string/food_suggestions_for"-->
-        <!--tools:layout_editor_absoluteX="125dp"-->
-        <!--tools:layout_editor_absoluteY="1dp" />-->
+    <TextView
+        android:id="@+id/foodTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/food_suggestions_for"
+        tools:layout_editor_absoluteX="125dp"
+        tools:layout_editor_absoluteY="1dp" />
 
     <ListView
     android:id="@+id/ingredientList"
