--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -6,22 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".FoodActivity">
 
-    <TextView
-        android:id="@+id/foodTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/food_suggestions_for"
-        tools:layout_editor_absoluteX="125dp"
-        tools:layout_editor_absoluteY="1dp" />
+    <!--<TextView-->
+        <!--android:id="@+id/foodTextView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:text="@string/food_suggestions_for"-->
+        <!--tools:layout_editor_absoluteX="125dp"-->
+        <!--tools:layout_editor_absoluteY="1dp" />-->
 
     <ListView
-    android:id="@+id/ingredientList"
-    android:layout_width="wrap_content"
+    android:id="@+id/ingredientListView"
+    android:layout_below="@+id/infoTextView"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"
+    android:layout_alignParentEnd="true"
     android:layout_marginTop="390dp"
-    android:background="#F8F8F8">"Uno"
-    </ListView>
-
+    android:background="#F8F8F8" />
 </android.support.constraint.ConstraintLayout>
