--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,12 +48,14 @@
         android:inputType="textPersonName"
         android:padding="5dp" />
 
-    <!--<ListView-->
-        <!--android:id="@+id/ingredientList"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="120dp"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_marginTop="390dp"-->
-        <!--android:background="#F8F8F8">"One"-->
-    <!--</ListView>-->
+    <EditText
+        android:id="@+id/priceEditText"
+        android:inputType="numberDecimal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="#F8F8F8"
+        android:ems="10"
+        android:hint="@string/setPrice"
+        android:padding="5dp" />
 </RelativeLayout>
